--- a/books/templates/books/book_form.html
+++ b/books/templates/books/book_form.html
@@ -1,4 +1,8 @@
-{% extends 'base.html' %}
-{% block content %}
-<h1>Book Form Page</h1>
+{% extends 'base.html' %} {% block content %}
+<h1>Add a New Book</h1>
+<form method="'post">
+  {% csrf_token %} {{ form.as_p }}
+  <button type="submit">Save</button>
+  <a href="{% url 'book_list' %}">Cancel</a>
+</form>
 {% endblock %}
