--- a/books/templates/books/book_confirm_delete.html
+++ b/books/templates/books/book_confirm_delete.html
@@ -1,4 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Book Confirm Delete Page</h1>
+    <h1>Delete “{{ book.title }}“?</h1>
+    <p>Are you sure you want to delete this book? This action cannot be undone.</p>
+    <form method="post">
+        {% csrf_token %}
+        <button type="submit">Yes, delete</button>
+        <a href="{% url 'book_list' %}">Cancel</a>
+    </form>
 {% endblock %}
