--- a/books/templates/registration/login.html
+++ b/books/templates/registration/login.html
@@ -1,8 +1,16 @@
 {% extends 'base.html' %} {% block content %}
 <h1>Log in</h1>
-<form method="post">
-  {% csrf_token %} {{ form.as_p }}
+<form method="post" action="{% url 'login' %}">
+  {% csrf_token %} {{ form.non_field_errors }}
+  <p>
+    {{ form.username.label_tag }}<br>
+    {{ form.username }}
+  </p>
+  <p>
+    {{ form.password.label_tag }}<br>
+    {{ form.password }}
+  </p>
   <button type="submit">Log in</button>
 </form>
-<p><a href="{% url 'password_reset' %}">Forgot password?</a></p>
+<p>Don't have an account yet?<a href="{% url 'signup' %}">Sign up here</a>.</p>
 {% endblock %}
