--- a/books/templates/books/book_form.html
+++ b/books/templates/books/book_form.html
@@ -1,10 +1,37 @@
-{% extends 'base.html' %} 
+{% extends "base.html" %} 
 {% block content %}
 <h1>{% if is_edit %}Edit Book{% else %}Add a New Book{% endif %}</h1>
-<form method="'post">
-  {% csrf_token %} 
-  {{ form.as_p }}
-  <button type="submit">{% if is_edit %}Save Changes{% else %}Save{% endif %}</button>
-  <a href="{% url 'book_list' %}">Cancel</a>
+
+<form method="post" class="mt-3">
+  {% csrf_token %}
+
+  <div class="mb-3">
+    {{ form.title.label_tag }} 
+    {{ form.title }} 
+    {{ form.title.errors }}
+  </div>
+
+  <div class="mb-3">
+    {{ form.author.label_tag }} 
+    {{ form.author }} 
+    {{ form.author.errors }}
+  </div>
+
+  <div class="mb-3">
+    {{ form.description.label_tag }} 
+    {{ form.description }} 
+    {{ form.description.errors }}
+  </div>
+
+  <div class="mb-3">
+    {{ form.date_read.label_tag }} 
+    {{ form.date_read }} 
+    {{ form.date_read.errors}}
+  </div>
+
+  <button type="submit" class="btn btn-success">
+    {% if is_edit %}Save Changes{% else %}Save{% endif %}
+  </button>
+  <a href="{% url 'book_list' %}" class="btn btn-secondary ms-2">Cancel</a>
 </form>
 {% endblock %}
