--- a/books/templates/books/book_confirm_delete.html
+++ b/books/templates/books/book_confirm_delete.html
@@ -1,10 +1,13 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block content %}
-    <h1>Delete “{{ book.title }}“?</h1>
+  <div class="alert alert-danger">
+    <h4 class="alert-heading">Delete “{{ book.title }}”?</h4>
     <p>Are you sure you want to delete this book? This action cannot be undone.</p>
-    <form method="post">
-        {% csrf_token %}
-        <button type="submit">Yes, delete</button>
-        <a href="{% url 'book_list' %}">Cancel</a>
+    <hr>
+    <form method="post" class="d-inline">
+      {% csrf_token %}
+      <button type="submit" class="btn btn-danger">Yes, delete</button>
     </form>
+    <a href="{% url 'book_list' %}" class="btn btn-secondary ms-2">Cancel</a>
+</div>
 {% endblock %}
