feat(ui): Add Bootstrap search form

--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -4,6 +4,13 @@
   <a href="{% url 'book_create' %}" class="btn btn-primary">+ Add New Book</a>
 </div>
 
+<form method="get" class="mb-3" role="search">
+  <div class="input-group">
+    <input type="search" name="q" value="{{ q }}" class="form-control" placeholder="Search by title or author">
+    <button class="btn btn-outline-secondary" type="submit">Search</button>
+  </div>
+</form>
+
 {% if books %}
 <ul class="list-group">
   {% for book in books %}
