--- a/books/templates/base.html
+++ b/books/templates/base.html
@@ -60,7 +60,7 @@
         {% for message in messages %}
           <div class="alert alert-{{ message.tags | default:'info' }} alert-dismissible fade show" role="alert">
             {{ massage }}
-            <type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
         {% endfor %}
       </div>
