--- a/books/templates/base.html
+++ b/books/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,6 +13,9 @@
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
+
+    <!-- Custom stylesheet -->
+     <link rel="stylesheet" href="{% static 'css/style.css' %}">
   </head>
   <body>
     <!-- Navbar -->
