--- a/books/templates/base.html
+++ b/books/templates/base.html
@@ -14,8 +14,14 @@
       crossorigin="anonymous"
     />
 
+    <!-- Bootstrap icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+    />
+
     <!-- Custom stylesheet -->
-     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   </head>
   <body>
     <!-- Navbar -->
@@ -60,21 +66,26 @@
 
     <!-- Flash messages -->
     {% if messages %}
-      <div class="container mt-3">
-        {% for message in messages %}
-          <div class="alert alert-{{ message.tags | default:'info' }} alert-dismissible fade show" role="alert">
-            {{ massage }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-          </div>
-        {% endfor %}
+    <div class="container mt-3">
+      {% for message in messages %}
+      <div
+        class="alert alert-{{ message.tags | default:'info' }} alert-dismissible fade show"
+        role="alert"
+      >
+        {{ massage }}
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="alert"
+          aria-label="Close"
+        ></button>
       </div>
+      {% endfor %}
+    </div>
     {% endif %}
 
     <!-- Main content -->
-     <div class="container mt-4">
-      {% block content %}{% endblock %}
-     </div>
-
+    <div class="container mt-4">{% block content %}{% endblock %}</div>
 
     <!-- Bootstrap JS-->
     <script
