--- a/books/templates/registration/signup.html
+++ b/books/templates/registration/signup.html
@@ -1,4 +1,25 @@
-{% extends 'base.html' %}
-{% block content %}
-<h1>SignUp Page</h1>
+{% extends "base.html" %} {% block content %}
+<div class="row justify-content-center">
+  <div class="col-sm-10 col-md-6 col-lg-5">
+    <div class="card shadow-sm">
+      <div class="card-body p-4">
+        <h1 class="h3 mb-3">Create Account</h1>
+        <form method="post">
+          {% csrf_token %} {{ form.non_field_errors }} {% for field in form %}
+          <div class="mb-3">
+            {{ field.label_tag }} {{ field }} {{ field.errors }}
+          </div>
+          {% endfor %}
+
+          <button type="submit" class="btn btn-primary w-100">Sign Up</button>
+        </form>
+        <hr class="my-4" />
+        <p class="mb-0 text-muted">
+          Already have an account?
+          <a href="{% url 'login' %}">Log in</a>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
