--- a/static/css/style.css
+++ b/static/css/style.css
@@ -202,3 +202,5 @@ h3 {
 .hero-copy { max-width: 720px; }
 /* bump Sun Aug 31 17:15:34 SAST 2025 */
 /* bump Sun Aug 31 17:41:48 SAST 2025 */
+/* hash-bump Sun Aug 31 19:45:41 SAST 2025 */
+/* force-bump Sun Aug 31 19:57:52 SAST 2025 */
