--- a/books/templates/base.html
+++ b/books/templates/base.html
@@ -19,6 +19,11 @@
       crossorigin="anonymous"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+
     <!-- Bootstrap icons -->
     <link
       rel="stylesheet"
@@ -26,7 +31,7 @@
     />
 
     <!-- Custom stylesheet -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   </head>
   <body>
     <!-- Navbar (sticky so it stays on top) -->
@@ -36,7 +41,7 @@
     >
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="{% url 'index' %}"
-          >BookNooks</a
+          ><i class="fas fa-book"></i>booknooks</a
         >
 
         <button
