--- a/books/templates/books/book_form.html
+++ b/books/templates/books/book_form.html
@@ -1,32 +1,31 @@
-{% extends "base.html" %} 
-{% block content %}
-<h1 class="page-title">{% if is_edit %}Edit Book{% else %}Add a New Book{% endif %}</h1>
+{% extends "base.html" %} {% block content %}
+<h1 class="page-title">
+  {% if is_edit %}Edit Book{% else %}Add a New Book{% endif %}
+</h1>
+<p class="text-muted mb-3">
+  Add the title and author to start your entry. You can include a description
+  and a date you finished reading.
+</p>
 
 <form method="post" class="mt-3">
   {% csrf_token %}
 
   <div class="mb-3">
-    {{ form.title.label_tag }} 
-    {{ form.title }} 
-    {{ form.title.errors }}
+    {{ form.title.label_tag }} {{ form.title }} {{ form.title.errors }}
   </div>
 
   <div class="mb-3">
-    {{ form.author.label_tag }} 
-    {{ form.author }} 
-    {{ form.author.errors }}
+    {{ form.author.label_tag }} {{ form.author }} {{ form.author.errors }}
   </div>
 
   <div class="mb-3">
-    {{ form.description.label_tag }} 
-    {{ form.description }} 
-    {{ form.description.errors }}
+    {{ form.description.label_tag }} {{ form.description }} {{
+    form.description.errors }}
   </div>
 
   <div class="mb-3">
-    {{ form.date_read.label_tag }} 
-    {{ form.date_read }} 
-    {{ form.date_read.errors}}
+    {{ form.date_read.label_tag }} {{ form.date_read }} {{
+    form.date_read.errors}}
   </div>
 
   <button type="submit" class="btn btn-success">
