style: Update hero image on index page

--- a/books/templates/books/index.html
+++ b/books/templates/books/index.html
@@ -3,7 +3,7 @@
 {% block hero %}
   <section class="hero">
     <div class="hero-bg"
-         style='background-image: url("{% static "images/landing-hero.jpg" %}")'></div>
+         style='background-image: url("{% static "images/landing-hero.webp" %}")'></div>
     <div class="hero-overlay"></div>
     <div class="hero-content container text-center">
       <div class="hero-copy mx-auto">
